--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,10 +804,11 @@ section {
   margin-top: 50px;
 }
 .menu .menu-img {
-  width: 100px;
-  border-radius: 50%;
+  width: 110px;
+  height: 100px;
+  border-radius: 100%;
   float: left;
-  border: 4px solid rgba(255, 255, 255, 0.2);
+  border: 3px solid rgba(255, 255, 255, 0.2);
 }
 .menu .menu-content {
   margin-left: 85px;
